# mentra-yc-hack

mentra/: CLAUDE.md  README.md  package.json
mentra/src/: index.ts
privacy-proxy/: .gitignore  CLAUDE.md  README.md  align_faces.py  allowlist.py  consent_detector.py  download_vosk_model.py  download_yunet_model.py  index.html  main.py  pyproject.toml  rtmp_relay.py  transcript.py
